ece220/.svn/pristine/1f/1f49fbd28a5e4814ac5b10cf5948b40cae256ecc.svn-base
Compilation Results:
********************
maze.c: In function 'createMaze':
maze.c:20:5: error: unknown type name 'ssize_t'
     ssize_t read;
     ^
maze.c:40:6: warning: implicit declaration of function 'getline' [-Wimplicit-function-declaration]
      while ((read = getline(&line, &len, f)) != -1){
      ^
maze.c:44:7: warning: implicit declaration of function 'strcpy' [-Wimplicit-function-declaration]
       strcpy(maze->cells[i], (char*) line); // copy string to maze->cells[row]
       ^
maze.c:44:7: warning: incompatible implicit declaration of built-in function 'strcpy' [enabled by default]
make: *** [maze.o] Error 1

Testing createMaze (20 pts)

Testing destroyMaze (10 pts)
destroyMaze score: 10 points if no memory leaks/errors otherwise 0
valgrind: ./grader: No such file or directory

Testing printMaze (10 pts)
PrintMazeScore: 0

Testing solveMazeManhattanDFS (23 pts)

solveMazeManhattan test2 total score: 0 






























Score for 27 tests: 0
Grade:
******
Late submission: 0
Functionality: 0 
Comments and Style: 
Intro paragraph: 
Total: 
